2004-11-04 Magnus Hagdorn
 * fixed Makefile and added target plots for EISMINT-[12]

2004-11-02 Magnus Hagdorn
 * hooked up eis dir to Makefiles

2004-10-22 Magnus Hagdorn
 * added test configuration for European run using eis_glide
 * added some more tests
	
2004-10-22 Magus Hagdorn
 * started PyCF testing framework

2004-09-21 Magnus Hagdorn
 * e2.l.config: fixed wrong output file

2004-09-17 Magnus Hagdorn
 * uploaded EISMINT 1 and 2 test cases