@@ -20,6 +20,7 @@ marine_margin = 2
 stress_calc = 2
 evolution = 2
 basal_water = 0
+vertical_integration = 1
 
 [time]
 tend = 200000.
@@ -34,11 +35,12 @@ geothermal = -42e-3
 
 [default]
 title: EISMINT-2 Exp F
+comment: forced upper kinematic BC
 
 [output]
 name: e2.f.nc
 frequency: 1000
-variables: thk uflx vflx bmlt temp uvel vvel wvel
+variables: thk bmlt temp uvel vvel wvel wgrd acab diffu
 
 [output]
 name: e2.f.hot.nc
