@@ -16,10 +16,11 @@ flow_law = 0
 isostasy = 0
 marine_margin = 2
 stress_calc = 2
-evolution = 2
+evolution = 0
 basal_water = 0
 slip_coeff = 2
 sliding_law = 0
+vertical_integration = 1
 
 [time]
 tend = 200000.
@@ -35,9 +36,10 @@ basal_tract_const = 1.e-3
 
 [default]
 title: EISMINT-2 Exp H
+comment: forced upper kinematic BC
 
 [output]
 name: e2.h.nc
 frequency: 1000
-variables: thk uflx vflx bmlt temp uvel vvel wvel wgrd
+variables: thk bmlt temp uvel vvel wvel wgrd acab diffu bwat
 
