@@ -17,8 +17,9 @@ isostasy = 0
 sliding_law = 4
 marine_margin = 2
 stress_calc = 2
-evolution = 2
+evolution = 0
 basal_water = 0
+vertical_integration = 1
 
 [time]
 tend = 200000.
@@ -33,6 +34,7 @@ geothermal = -42e-3
 
 [default]
 title: EISMINT-2 Exp I
+comment: forced upper kinematic BC
 
 [input]
 name: trough.nc
@@ -40,7 +42,7 @@ name: trough.nc
 [output]
 name: e2.i.nc
 frequency: 1000
-variables: topg thk uflx vflx bmlt temp uvel vvel wvel wgrd
+variables: topg thk bmlt temp uvel vvel wvel wgrd acab diffu
 
 [output]
 name: e2.i.hot.nc
