@@ -1,4 +1,4 @@
-SUBDIRS = EISMINT-1 EISMINT-2 eis
+SUBDIRS = EISMINT-1 EISMINT-2 lin-non_lin eis
 
 subdirs:	$(SUBDIRS)
 
